ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-nginx-ingress
  namespace: nginx-ingress
  annotations:
    nginx.org/proxy-body-size: 10G
    nginx.org/enable-underscores-in-headers: "true"
    nginx.org/proxy-read-timeout: "300"
    nginx.org/proxy-send-timeout: "300"
    nginx.org/proxy-connect-timeout: "1200"
    # nginx.org/client-header-timeout: "300"
    nginx.org/upstream-keepalive-timeout: "300"
    nginx.org/proxy-buffer-size: 8k
spec:
  ingressClassName: nginx
  rules:
  - host: <hostname>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: static-server
            port: 
              number: 8080
  defaultBackend:
    service:
      name: static-server
      port:
        number: 8080
